finished the comments from custumer

--- a/index.html
+++ b/index.html
@@ -38,24 +38,42 @@
     <div class="main-c">
     <div class="custemer">
       <div class="c1">
-    <h2>Colton Smith </h2>
-    Verified Buyer
-    <p>"We needed the same printed design as the one we had ordered a week prior.
+        <div style="display: flex;align-items: center;">
+           <img style="border-radius: 100px;width:40px;padding:15px;margin-right: 20px;" src="./images/image-colton.jpg" href="./images/favicon-32x32.png">
+           <div class="small">
+                <h2 style="color:hsl(0, 0%, 100%);">  Colton Smith </h2>
+               <p style="color:hsl(333, 80%, 67%);">Verified Buyer</p>
+            </div>
+        </div>
+        
+    <p style="color:hsl(0, 0%, 100%);">"We needed the same printed design as the one we had ordered a week prior.
     Not only did they find the original order, but we also received it in time.
     Excellent!"
     </p>
     </div>
     <div class="c2">
-    Irene Roberts 
-    Verified Buyer
-    "Customer service is always excellent and very quick turn around. Completely
+      <div style="display: flex;align-items: center;">
+              <img style="border-radius: 100px;width:40px;padding:15px;margin-right: 20px;" src="./images/image-irene.jpg" href="./images/favicon-32x32.png">
+         <div class="small">
+            <h2 style="color:hsl(0, 0%, 100%);">Irene Roberts </h2>
+            <p  style="color:hsl(333, 80%, 67%);">Verified Buyer</p>
+         </div>
+    </div>
+    <p style="color:hsl(0, 0%, 100%);">"Customer service is always excellent and very quick turn around. Completely
     delighted with the simplicity of the purchase and the speed of delivery."
+    </p>
     </div>
     <div class="c3">
-    Anne Wallace 
-    Verified Buyer
-    "Put an order with this company and can only praise them for the very high
+      <div style="display: flex;align-items: center;">
+         <img style="border-radius: 100px;width:40px;padding:15px;margin-right: 20px;" src="./images/image-anne.jpg" href="./images/favicon-32x32.png">
+        <div class="small">
+            <h2 style="color:hsl(0, 0%, 100%);">Anne Wallace </h2>
+              <P  style="color:hsl(333, 80%, 67%);">Verified Buyer</P>
+        </div>
+    </div>
+    <p style="color:hsl(0, 0%, 100%);">"Put an order with this company and can only praise them for the very high
     standard. Will definitely use them again and recommend them to everyone!"
+    </p>
     </div>
 </div>
 </div>
